feat: ✨ Added modular regression automation
Split the dev-client bridge into focused endpoint and scenario packages, added Backpack and linked-storage regression suites, and updated runners for suite selection and bridge capability checks.