@@ -1,13 +1,13 @@
 package net.p3pp3rf1y.devclientautomation.recipeviewer.jei;
 
+import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.IRecipeLayoutDrawable;
 import mezz.jei.api.gui.ingredient.IRecipeSlotView;
 import mezz.jei.api.ingredients.IIngredientSupplier;
-import mezz.jei.api.ingredients.ITypedIngredient;
 import mezz.jei.api.recipe.IFocus;
-import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.IRecipeManager;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.category.IRecipeCategory;
@@ -23,14 +23,13 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import net.p3pp3rf1y.devclientautomation.JsonUtil;
 import net.p3pp3rf1y.devclientautomation.recipeviewer.*;
 import org.jetbrains.annotations.Nullable;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 	@Nullable
@@ -52,10 +51,15 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		if (jeiRuntime == null) {
 			return runtimeUnavailableJson(screen);
 		}
-		return "{\"ok\":true," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("searchText", jeiRuntime.getIngredientFilter().getFilterText())
-				+ "," + "\"indexStackCount\":" + jeiRuntime.getIngredientManager().getAllItemStacks().size() + "," + "\"recipeCount\":"
-				+ recipeCount(jeiRuntime) + "," + "\"recipeScreenOpen\":" + isRecipeScreenOpen(screen) + ","
-				+ JsonUtil.property("screenClass", screen == null ? null : screen.getClass().getName()) + "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", true);
+		response.addProperty("viewer", id());
+		response.addProperty("searchText", jeiRuntime.getIngredientFilter().getFilterText());
+		response.addProperty("indexStackCount", jeiRuntime.getIngredientManager().getAllItemStacks().size());
+		response.addProperty("recipeCount", recipeCount(jeiRuntime));
+		response.addProperty("recipeScreenOpen", isRecipeScreenOpen(screen));
+		response.addProperty("screenClass", screen == null ? null : screen.getClass().getName());
+		return response.toString();
 	}
 
 	@Override
@@ -65,8 +69,11 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 			return runtimeUnavailableJson(Minecraft.getInstance().gui.screen());
 		}
 		jeiRuntime.getIngredientFilter().setFilterText(query);
-		return "{\"ok\":true," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("searchText", jeiRuntime.getIngredientFilter().getFilterText())
-				+ "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", true);
+		response.addProperty("viewer", id());
+		response.addProperty("searchText", jeiRuntime.getIngredientFilter().getFilterText());
+		return response.toString();
 	}
 
 	@Override
@@ -89,14 +96,25 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		} else if (normalizedMode.equals("uses") || normalizedMode.equals("usage") || normalizedMode.equals("crafts_into")) {
 			role = RecipeIngredientRole.INPUT;
 		} else {
-			return "{\"ok\":false," + JsonUtil.property("error", "Unknown mode: " + mode) + "}";
+			JsonObject response = new JsonObject();
+			response.addProperty("ok", false);
+			response.addProperty("error", "Unknown mode: " + mode);
+			return response.toString();
 		}
 		IFocus<ItemStack> focus = jeiRuntime.getJeiHelpers().getFocusFactory().createFocus(role, VanillaTypes.ITEM_STACK, stack.get());
 		jeiRuntime.getRecipesGui().show(focus);
 		Screen screen = Minecraft.getInstance().gui.screen();
-		return "{\"ok\":true," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("item", itemId(stack.get())) + ","
-				+ JsonUtil.property("mode", normalizedMode) + "," + "\"recipeScreenOpen\":" + isRecipeScreenOpen(screen) + ","
-				+ JsonUtil.property("screenClass", screen == null ? null : screen.getClass().getName()) + "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", isRecipeScreenOpen(screen));
+		response.addProperty("viewer", id());
+		response.addProperty("item", itemId(stack.get()));
+		response.addProperty("mode", normalizedMode);
+		response.addProperty("recipeScreenOpen", isRecipeScreenOpen(screen));
+		response.addProperty("screenClass", screen == null ? null : screen.getClass().getName());
+		if (!isRecipeScreenOpen(screen)) {
+			response.addProperty("error", "JEI recipe screen did not open");
+		}
+		return response.toString();
 	}
 
 	@Override
@@ -112,12 +130,20 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 			return itemNotFoundJson(itemId);
 		}
 		int limit = RecipeViewerRequest.limit(request, 20);
-		List<RecipeEntry> recipes = distinctRecipes(withFocusedFallback(jeiRuntime, stack.get(), RecipeIngredientRole.OUTPUT));
-		List<RecipeEntry> uses = distinctRecipes(withFocusedFallback(jeiRuntime, stack.get(), RecipeIngredientRole.INPUT));
-		return "{\"ok\":true," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("item", itemId(stack.get())) + ","
-				+ JsonUtil.property("name", stack.get().getHoverName().getString()) + "," + "\"uiBacked\":true,"
-				+ JsonUtil.rawProperty("focusStack", RecipeJsonUtil.itemStackJson(stack.get())) + "," + "\"recipeCount\":" + recipes.size() + ","
-				+ "\"useCount\":" + uses.size() + "," + "\"recipes\":" + recipesJson(recipes, limit) + "," + "\"uses\":" + recipesJson(uses, limit) + "}";
+		List<RecipeEntry> recipes = openedRecipes(jeiRuntime, stack.get(), RecipeIngredientRole.OUTPUT);
+		List<RecipeEntry> uses = openedRecipes(jeiRuntime, stack.get(), RecipeIngredientRole.INPUT);
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", true);
+		response.addProperty("viewer", id());
+		response.addProperty("item", itemId(stack.get()));
+		response.addProperty("name", stack.get().getHoverName().getString());
+		response.addProperty("uiBacked", true);
+		response.add("focusStack", JsonParser.parseString(RecipeJsonUtil.itemStackJson(stack.get())));
+		response.addProperty("recipeCount", recipes.size());
+		response.addProperty("useCount", uses.size());
+		response.add("recipes", recipesJson(recipes, limit));
+		response.add("uses", recipesJson(uses, limit));
+		return response.toString();
 	}
 
 	@Override
@@ -137,28 +163,47 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		jeiRuntime.getRecipesGui().show(focus);
 		Screen screen = Minecraft.getInstance().gui.screen();
 		if (!isRecipeScreenOpen(screen)) {
-			return "{\"ok\":false," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("error", "JEI recipe screen did not open") + ","
-					+ JsonUtil.property("screenClass", screen == null ? null : screen.getClass().getName()) + "}";
+			JsonObject response = new JsonObject();
+			response.addProperty("ok", false);
+			response.addProperty("viewer", id());
+			response.addProperty("error", "JEI recipe screen did not open");
+			response.addProperty("screenClass", screen == null ? null : screen.getClass().getName());
+			return response.toString();
 		}
 
 		try {
 			Object parentContainerObject = invoke(screen, "getParentContainerMenu");
 			if (!(parentContainerObject instanceof AbstractContainerMenu parentContainer)) {
-				return "{\"ok\":true," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("item", itemId(stack.get()))
-						+ ",\"recipeScreenOpen\":true,\"hasParentContainer\":false,\"hasTransferHandler\":false,\"visible\":false,\"active\":false}";
+				JsonObject response = new JsonObject();
+				response.addProperty("ok", false);
+				response.addProperty("viewer", id());
+				response.addProperty("error", "JEI recipe screen has no parent container");
+				return response.toString();
 			}
 			Player player = Minecraft.getInstance().player;
 			if (player == null) {
-				return "{\"ok\":false," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("error", "Client player is not available") + "}";
+				JsonObject response = new JsonObject();
+				response.addProperty("ok", false);
+				response.addProperty("viewer", id());
+				response.addProperty("error", "Client player is not available");
+				return response.toString();
 			}
 			List<IRecipeLayoutDrawable<?>> layouts = openedRecipeLayouts(screen);
 			if (layouts.isEmpty()) {
-				return "{\"ok\":false," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("error", "No visible JEI recipe layouts") + "}";
+				JsonObject response = new JsonObject();
+				response.addProperty("ok", false);
+				response.addProperty("viewer", id());
+				response.addProperty("error", "No visible JEI recipe layouts");
+				return response.toString();
 			}
 
-			return transferStateJson(jeiRuntime, parentContainer, player, layouts.get(0), stack.get());
+			return transferStateJson(jeiRuntime, parentContainer, player, layouts.getFirst(), stack.get());
 		} catch (ReflectiveOperationException | RuntimeException e) {
-			return "{\"ok\":false," + JsonUtil.property("viewer", id()) + "," + JsonUtil.property("error", e.getMessage()) + "}";
+			JsonObject response = new JsonObject();
+			response.addProperty("ok", false);
+			response.addProperty("viewer", id());
+			response.addProperty("error", e.getMessage());
+			return response.toString();
 		}
 	}
 
@@ -188,21 +233,12 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 				.mapToInt(category -> recipesForCategory(jeiRuntime.getRecipeManager(), category).size()).sum();
 	}
 
-	private static List<RecipeEntry> matchingRecipes(IJeiRuntime jeiRuntime, ItemStack stack, RecipeIngredientRole role) {
-		IFocus<ItemStack> focus = jeiRuntime.getJeiHelpers().getFocusFactory().createFocus(role, VanillaTypes.ITEM_STACK, stack);
-		IFocusGroup focusGroup = jeiRuntime.getJeiHelpers().getFocusFactory().createFocusGroup(List.of(focus));
-		IRecipeManager recipeManager = jeiRuntime.getRecipeManager();
-		return recipeManager.createRecipeCategoryLookup().limitFocus(List.of(focus)).get().flatMap(
-				category -> recipesForCategory(recipeManager, category, focus).stream().map(recipe -> recipeEntry(recipeManager, category, recipe, focusGroup)))
-				.collect(Collectors.toList());
-	}
-
 	private static List<RecipeEntry> openedRecipes(IJeiRuntime jeiRuntime, ItemStack stack, RecipeIngredientRole role) {
 		IFocus<ItemStack> focus = jeiRuntime.getJeiHelpers().getFocusFactory().createFocus(role, VanillaTypes.ITEM_STACK, stack);
 		jeiRuntime.getRecipesGui().show(focus);
 		Screen screen = Minecraft.getInstance().gui.screen();
 		if (!isRecipeScreenOpen(screen)) {
-			return List.of();
+			throw new IllegalStateException("JEI did not open a recipe screen");
 		}
 		try {
 			Object logic = getField(screen, "logic");
@@ -222,7 +258,7 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 			} while (categoryGuard < 100);
 			return entries;
 		} catch (ReflectiveOperationException | RuntimeException e) {
-			return List.of();
+			throw new IllegalStateException("Failed to read opened JEI recipes", e);
 		}
 	}
 
@@ -241,25 +277,6 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		} while (pageGuard < 100);
 	}
 
-	private static List<RecipeEntry> withFocusedFallback(IJeiRuntime jeiRuntime, ItemStack stack, RecipeIngredientRole role) {
-		List<RecipeEntry> recipes = new ArrayList<>(openedRecipes(jeiRuntime, stack, role));
-		if (!recipes.isEmpty() && !hasSophisticatedComponents(stack) && !isSophisticatedItem(stack)) {
-			return recipes;
-		}
-		recipes.addAll(matchingRecipes(jeiRuntime, stack, role));
-		return recipes;
-	}
-
-	private static boolean isSophisticatedItem(ItemStack stack) {
-		String namespace = BuiltInRegistries.ITEM.getKey(stack.getItem()).getNamespace();
-		return namespace.startsWith("sophisticated");
-	}
-
-	private static boolean hasSophisticatedComponents(ItemStack stack) {
-		String stackJson = RecipeJsonUtil.itemStackJson(stack);
-		return stackJson.contains("sophisticatedcore:") || stackJson.contains("sophisticatedstorage:") || stackJson.contains("sophisticatedstorageinmotion:");
-	}
-
 	private static List<RecipeEntry> openedRecipeLayoutEntries(Screen screen) throws ReflectiveOperationException {
 		List<IRecipeLayoutDrawable<?>> layouts = openedRecipeLayouts(screen);
 		List<RecipeEntry> entries = new ArrayList<>();
@@ -273,14 +290,15 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		Object layouts = getField(screen, "layouts");
 		Object layoutEntries = getField(layouts, "recipeLayoutsWithButtons");
 		if (!(layoutEntries instanceof List<?> recipeLayoutsWithButtons)) {
-			return List.of();
+			throw new IllegalStateException("Unexpected JEI recipe layout entries");
 		}
 		List<IRecipeLayoutDrawable<?>> entries = new ArrayList<>();
 		for (Object recipeLayoutWithButtons : recipeLayoutsWithButtons) {
 			Object recipeLayout = invokeAny(recipeLayoutWithButtons, "recipeLayout", "getRecipeLayout");
-			if (recipeLayout instanceof IRecipeLayoutDrawable<?> layout) {
-				entries.add(layout);
+			if (!(recipeLayout instanceof IRecipeLayoutDrawable<?> layout)) {
+				throw new IllegalStateException("Unexpected JEI recipe layout entry");
 			}
+			entries.add(layout);
 		}
 		return entries;
 	}
@@ -298,12 +316,21 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		IRecipeTransferError.Type errorType = transferError == null ? null : transferError.getType();
 		boolean active = handler.isPresent() && (transferError == null || errorType.allowsTransfer);
 		boolean visible = active || errorType == IRecipeTransferError.Type.USER_FACING;
-		return "{\"ok\":true," + JsonUtil.property("viewer", "jei") + "," + JsonUtil.property("item", itemId(focusStack))
-				+ ",\"recipeScreenOpen\":true,\"hasParentContainer\":true," + JsonUtil.property("parentContainerClass", parentContainer.getClass().getName())
-				+ "," + JsonUtil.property("recipeId", recipeId(layout.getRecipe())) + ","
-				+ JsonUtil.property("category", category.getRecipeType().getUid().toString()) + ",\"hasTransferHandler\":" + handler.isPresent()
-				+ ",\"visible\":" + visible + ",\"active\":" + active + "," + JsonUtil.property("errorType", errorType == null ? null : errorType.name())
-				+ ",\"missingCountHint\":" + (transferError == null ? 0 : transferError.getMissingCountHint()) + "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", true);
+		response.addProperty("viewer", "jei");
+		response.addProperty("item", itemId(focusStack));
+		response.addProperty("recipeScreenOpen", true);
+		response.addProperty("hasParentContainer", true);
+		response.addProperty("parentContainerClass", parentContainer.getClass().getName());
+		response.addProperty("recipeId", recipeId(layout.getRecipe()));
+		response.addProperty("category", category.getRecipeType().getUid().toString());
+		response.addProperty("hasTransferHandler", handler.isPresent());
+		response.addProperty("visible", visible);
+		response.addProperty("active", active);
+		response.addProperty("errorType", errorType == null ? null : errorType.name());
+		response.addProperty("missingCountHint", transferError == null ? 0 : transferError.getMissingCountHint());
+		return response.toString();
 	}
 
 	@SuppressWarnings("unchecked")
@@ -382,23 +409,6 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 	}
 
 	@SuppressWarnings({"rawtypes", "unchecked"})
-	private static List<?> recipesForCategory(IRecipeManager recipeManager, IRecipeCategory<?> category, IFocus<?> focus) {
-		IRecipeCategory rawCategory = category;
-		return recipeManager.createRecipeLookup(rawCategory.getRecipeType()).limitFocus(List.of(focus)).get().toList();
-	}
-
-	@SuppressWarnings({"rawtypes", "unchecked"})
-	private static RecipeEntry recipeEntry(IRecipeManager recipeManager, IRecipeCategory<?> category, Object recipe, IFocusGroup focusGroup) {
-		IRecipeCategory rawCategory = category;
-		Optional<IRecipeLayoutDrawable<Object>> layout = recipeManager.createRecipeLayoutDrawable(rawCategory, recipe, focusGroup);
-		if (layout.isPresent()) {
-			return new RecipeEntry(recipeId(recipe), category.getRecipeType().getUid().toString(), category.getTitle().getString(),
-					slotStacks(layout.get(), RecipeIngredientRole.INPUT), slotStacks(layout.get(), RecipeIngredientRole.OUTPUT));
-		}
-		return recipeEntry(recipeManager, category, recipe, recipeId(recipe));
-	}
-
-	@SuppressWarnings({"rawtypes", "unchecked"})
 	private static RecipeEntry recipeEntry(IRecipeManager recipeManager, IRecipeCategory<?> category, Object recipe, String id) {
 		IRecipeCategory rawCategory = category;
 		IIngredientSupplier ingredients = recipeManager.getRecipeIngredients(rawCategory, recipe);
@@ -410,45 +420,7 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 	}
 
 	private static List<List<ItemStack>> slotStacks(IRecipeLayoutDrawable<?> layout, RecipeIngredientRole role) {
-		return layout.getRecipeSlotsView().getSlotViews(role).stream().map(slot -> slotStacks(slot, role)).toList();
-	}
-
-	private static List<ItemStack> slotStacks(IRecipeSlotView slot, RecipeIngredientRole role) {
-		List<ItemStack> stacks = new ArrayList<>(slot.getItemStacks().toList());
-		for (ItemStack overrideStack : displayOverrideItemStacks(slot)) {
-			if (stacks.stream().noneMatch(stack -> ItemStack.isSameItemSameComponents(stack, overrideStack))) {
-				stacks.add(0, overrideStack);
-			}
-		}
-		slot.getDisplayedItemStack().filter(displayed -> stacks.stream().noneMatch(stack -> ItemStack.isSameItemSameComponents(stack, displayed)))
-				.ifPresent(displayed -> stacks.add(0, displayed));
-		return stacks;
-	}
-
-	private static List<ItemStack> displayOverrideItemStacks(IRecipeSlotView slot) {
-		try {
-			Field displayOverridesField = slot.getClass().getDeclaredField("displayOverrides");
-			displayOverridesField.setAccessible(true);
-			Object displayOverrides = displayOverridesField.get(slot);
-			if (displayOverrides == null) {
-				return List.of();
-			}
-			Method getAllIngredients = displayOverrides.getClass().getDeclaredMethod("getAllIngredients");
-			getAllIngredients.setAccessible(true);
-			Object ingredients = getAllIngredients.invoke(displayOverrides);
-			if (!(ingredients instanceof List<?> ingredientList)) {
-				return List.of();
-			}
-			List<ItemStack> stacks = new ArrayList<>();
-			for (Object ingredient : ingredientList) {
-				if (ingredient instanceof ITypedIngredient<?> typedIngredient) {
-					typedIngredient.getIngredient(VanillaTypes.ITEM_STACK).ifPresent(stacks::add);
-				}
-			}
-			return stacks;
-		} catch (ReflectiveOperationException | RuntimeException e) {
-			return List.of();
-		}
+		return layout.getRecipeSlotsView().getSlotViews(role).stream().map(IRecipeSlotView::getItemStacks).map(Stream::toList).toList();
 	}
 
 	private static String recipeId(Object recipe) {
@@ -458,73 +430,39 @@ public class JeiRecipeViewerAutomation implements RecipeViewerAutomation {
 		return null;
 	}
 
-	private static String recipesJson(List<RecipeEntry> recipes, int limit) {
+	private static JsonArray recipesJson(List<RecipeEntry> recipes, int limit) {
 		int safeLimit = Math.max(0, limit);
-		String entries = recipes.stream().limit(safeLimit).map(JeiRecipeViewerAutomation::recipeJson).collect(Collectors.joining(","));
-		return "[" + entries + "]";
+		JsonArray result = new JsonArray();
+		recipes.stream().limit(safeLimit).map(JeiRecipeViewerAutomation::recipeJson).forEach(result::add);
+		return result;
 	}
 
-	private static List<RecipeEntry> distinctRecipes(List<RecipeEntry> recipes) {
-		Map<String, RecipeEntry> distinct = new LinkedHashMap<>();
-		for (RecipeEntry recipe : recipes) {
-			String key = recipeIdentityKey(recipe);
-			RecipeEntry existing = distinct.get(key);
-			if (existing == null || componentScore(recipe) > componentScore(existing)) {
-				distinct.put(key, recipe);
-			}
-		}
-		return List.copyOf(distinct.values());
-	}
-
-	private static int componentScore(RecipeEntry recipe) {
-		return componentScore(recipe.inputs()) + componentScore(recipe.outputs());
-	}
-
-	private static int componentScore(List<List<ItemStack>> stacks) {
-		return stacks.stream().mapToInt(slot -> slot.stream().mapToInt(JeiRecipeViewerAutomation::componentScore).max().orElse(0)).sum();
-	}
-
-	private static int componentScore(ItemStack stack) {
-		String stackJson = RecipeJsonUtil.itemStackJson(stack);
-		return namespaceOccurrences(stackJson, "sophisticatedcore:") + namespaceOccurrences(stackJson, "sophisticatedstorage:")
-				+ namespaceOccurrences(stackJson, "sophisticatedstorageinmotion:");
-	}
-
-	private static int namespaceOccurrences(String value, String namespace) {
-		int count = 0;
-		int index = value.indexOf(namespace);
-		while (index >= 0) {
-			count++;
-			index = value.indexOf(namespace, index + namespace.length());
-		}
-		return count;
-	}
-
-	private static String recipeIdentityKey(RecipeEntry recipe) {
-		return normalizedRecipeId(recipe.id()) + "|" + recipe.category();
-	}
-
-	private static String normalizedRecipeId(@Nullable String id) {
-		if (id != null && id.startsWith("ResourceKey[minecraft:recipe / ") && id.endsWith("]")) {
-			return id.substring("ResourceKey[minecraft:recipe / ".length(), id.length() - 1);
-		}
-		return String.valueOf(id);
-	}
-
-	private static String recipeJson(RecipeEntry recipe) {
-		return "{" + JsonUtil.property("id", recipe.id()) + "," + JsonUtil.property("category", recipe.category()) + ","
-				+ JsonUtil.property("categoryName", recipe.categoryName()) + "," + "\"inputCount\":" + recipe.inputs().size() + "," + "\"outputCount\":"
-				+ recipe.outputs().size() + "," + "\"inputs\":" + RecipeJsonUtil.itemStackIngredientGroupsJson(recipe.inputs()) + "," + "\"outputs\":"
-				+ RecipeJsonUtil.itemStackIngredientGroupsJson(recipe.outputs()) + "}";
+	private static JsonObject recipeJson(RecipeEntry recipe) {
+		JsonObject result = new JsonObject();
+		result.addProperty("id", recipe.id());
+		result.addProperty("category", recipe.category());
+		result.addProperty("categoryName", recipe.categoryName());
+		result.addProperty("inputCount", recipe.inputs().size());
+		result.addProperty("outputCount", recipe.outputs().size());
+		result.add("inputs", JsonParser.parseString(RecipeJsonUtil.itemStackIngredientGroupsJson(recipe.inputs())));
+		result.add("outputs", JsonParser.parseString(RecipeJsonUtil.itemStackIngredientGroupsJson(recipe.outputs())));
+		return result;
 	}
 
 	private static String itemNotFoundJson(String itemId) {
-		return "{\"ok\":false," + JsonUtil.property("error", "Item not found in JEI index: " + itemId) + "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", false);
+		response.addProperty("error", "Item not found in JEI index: " + itemId);
+		return response.toString();
 	}
 
 	private static String runtimeUnavailableJson(@Nullable Screen screen) {
-		return "{\"ok\":false," + JsonUtil.property("viewer", "jei") + "," + JsonUtil.property("error", "JEI runtime is not available") + ","
-				+ JsonUtil.property("screenClass", screen == null ? null : screen.getClass().getName()) + "}";
+		JsonObject response = new JsonObject();
+		response.addProperty("ok", false);
+		response.addProperty("viewer", "jei");
+		response.addProperty("error", "JEI runtime is not available");
+		response.addProperty("screenClass", screen == null ? null : screen.getClass().getName());
+		return response.toString();
 	}
 
 	private static boolean isRecipeScreenOpen(@Nullable Screen screen) {
